[workspace]
members = ["fortitude", "fortitude_macros", "fortitude_dev"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/PlasmaFAIR/fortitude"
authors = [
  "Liam Pattinson <liampattinson@gmail.com>",
  "Peter Hill <peter.hill@york.ac.uk>",
]
license = "MIT"

[workspace.dependencies]
fortitude = { path = "fortitude" }
fortitude_macros = { path = "fortitude_macros" }

anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive", "string", "env"] }
clap_complete_command = { version = "0.6.0" }
colored = { version = "2.1.0" }
itertools = "0.12.0"
ruff_cache = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.6", version = "0.0.0" }
ruff_diagnostics = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.6", version = "0.0.0" }
ruff_macros = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.6", version = "0.0.0" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.6", version = "0.0.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.6", version = "0.0.0" }
serde_json = { version = "1.0.113" }
strum = { version = "0.26.0", features = ["strum_macros"] }
strum_macros = { version = "0.26.0" }
textwrap = { version = "0.16.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
