[build-system]
requires = ["maturin >= 1.0, < 2.0"]
build-backend = "maturin"

[project]
name = "fortitude-lint"
version = "0.7.0"
description = "A Fortran linter, written in Rust and installable with Python"
readme = "README.md"
authors = [
    {name = "Liam Pattinson", email = "liampattinson@gmail.com"},
    {name = "Peter Hill", email = "peter.hill@york.ac.uk"},
]
licence = {file = "LICENSE"}
keywords = ["Fortran", "linter"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/PlasmaFAIR/fortitude"

[project.optional-dependencies]
lint = [
    "ruff",
]

[tool.maturin]
bindings = "bin"
module-name = "fortitude"
python-source = "python"
python-packages = ["fortitude"]
manifest-path = "fortitude/Cargo.toml"
include = [{ path = "LICENSE", format = "sdist" }]
exclude = [
    "fortitude/resources/test/fixtures/**/*",
    "fortitude/src/rules/*/snapshots/**/*",
    "fortitude/src/message/snapshots/*"
]
strip = true

[tool.rooster]
major_labels = []  # Major version number never used
minor_labels = ["breaking"]   # Bump the minor version on breaking changes

changelog_ignore_labels = ["internal", "ci", "tests"]

changelog_sections.breaking = "Breaking changes"
changelog_sections.preview = "Preview features"
changelog_sections.rule = "Rule changes"
changelog_sections.diagnostics = "Rule changes"
changelog_sections.docstring = "Rule changes"
changelog_sections.fixes = "Rule changes"
changelog_sections.formatter = "Formatter"
changelog_sections.performance = "Performance"
changelog_sections.server = "Server"
changelog_sections.cli = "CLI"
changelog_sections.configuration = "Configuration"
changelog_sections.bug = "Bug fixes"
changelog_sections.documentation = "Documentation"
changelog_sections.__unknown__ = "Other changes"

version_tag_prefix = "v"

version_files = [
    "README.md",
    "fortitude/Cargo.toml",
]
