[package]
name = "fortitude"
version = "0.5.0"
description = "A Fortran linter, written in Rust and installable with Python"
authors = [
  "Liam Pattinson <liampattinson@gmail.com>",
  "Peter Hill <peter.hill@york.ac.uk>",
]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/PlasmaFAIR/fortitude"
license = "MIT"
keywords = ["Fortran", "linter"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".*", "test.f90"]

[dependencies]
annotate-snippets = { git = "https://github.com/PlasmaFAIR/annotate-snippets-rs.git", branch = "level-none" }
anyhow = "1.0.79"
bitflags = "2.6.0"
clap = { version = "4.4.16", features = ["derive", "string", "env"] }
colored = { workspace = true }
fortitude_macros = { version = "0.1.0", path = "../fortitude_macros" }
is-macro = "0.3.7"
itertools = { workspace = true }
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
path-absolutize = { version = "3.1.1", features = [
    "once_cell_cache",
    "use_unix_paths_on_wasm",
]}
pathdiff = { version = "0.2.1" }
rayon = "1.10.0"
ruff_cache = { git = "https://github.com/astral-sh/ruff.git", tag = "0.7.1", version = "0.0.0" }
ruff_diagnostics = { git = "https://github.com/astral-sh/ruff.git", tag = "0.7.1", version = "0.0.0", features = ["serde"] }
ruff_macros = { git = "https://github.com/astral-sh/ruff.git", tag = "0.7.1", version = "0.0.0" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "0.7.1", version = "0.0.0", features = ["serde"] }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.7.1", version = "0.0.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { workspace = true }
similar-asserts = "1.6.0"
strum = { workspace = true }
strum_macros = { workspace = true }
textwrap = "0.16.0"
thiserror = { version = "1.0.58" }
toml = "0.8.19"
tree-sitter = "~0.23.0"
tree-sitter-fortran = "0.2.0"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.16"
# Disable colored output in tests
colored = { workspace = true, features = ["no-color"] }
insta = { version = "1.41.1", features = ["filters"] }
insta-cmd = "0.6.0"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
tempfile = "3.13.0"
test-case = "3.3.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
