[package]
name = "fortitude"
version = "0.7.0"
description = "A Fortran linter, written in Rust and installable with Python"
authors = [
  "Liam Pattinson <liampattinson@gmail.com>",
  "Peter Hill <peter.hill@york.ac.uk>",
]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/PlasmaFAIR/fortitude"
license = "MIT"
keywords = ["Fortran", "linter"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".*", "test.f90"]
build = "build.rs"

[dependencies]
fortitude_macros = { workspace = true }

annotate-snippets = { git = "https://github.com/PlasmaFAIR/annotate-snippets-rs.git", branch = "level-none" }
anyhow = { workspace = true }
bitflags = "2.6.0"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
clap = { workspace = true }
clap_complete_command = { workspace = true }
colored = { workspace = true }
ignore = "0.4.23"
is-macro = "0.3.7"
indicatif = { version = "0.17.9", features = ["rayon", "improved_unicode"] }
itertools = { workspace = true }
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
path-absolutize = { version = "3.1.1", features = [
    "once_cell_cache",
    "use_unix_paths_on_wasm",
]}
pathdiff = { version = "0.2.1" }
quick-junit = { version = "0.5.0" }
rayon = "1.10.0"
ruff_cache = { workspace = true }
ruff_diagnostics = { workspace = true, features = ["serde"] }
ruff_macros = { workspace = true }
ruff_source_file = { workspace = true, features = ["serde"] }
ruff_text_size = { workspace = true }
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { workspace = true }
similar = { version = "2.4.0", features = ["inline"] }
similar-asserts = "1.6.0"
shadow-rs = { version = "0.36.0", default-features = false }
strum = { workspace = true }
strum_macros = { workspace = true }
textwrap = { workspace = true }
thiserror = { version = "1.0.58" }
toml = "0.8.19"
tree-sitter = "~0.24.0"
tree-sitter-fortran = "0.5.0"
unicode-width = "0.2.0"
url = { version = "2.5.0" }
globset = "0.4.15"
log = "0.4.22"
fern = "0.7.1"

[build-dependencies]
shadow-rs = { version = "0.36.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.16"
# Disable colored output in tests
colored = { workspace = true, features = ["no-color"] }
insta = { version = "1.41.1", features = ["filters", "json", "redactions"] }
insta-cmd = "0.6.0"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
tempfile = "3.13.0"
test-case = "3.3.1"
# This is a bit weird, but this enables the test rules when we run the tests
fortitude = { workspace = true, features = ["test-rules"] }

[features]
# Enables rules for internal integration tests
test-rules = []
