[package]
name = "fortitude_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
clap = { workspace = true }
heck = "0.5.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
serde = { workspace = true }
syn = { version = "2.0.86", features = ["full"] }
itertools = { workspace = true }
