[package]
name = "fortitude_dev"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
fortitude = { workspace = true }
fortitude_linter = { workspace = true }
fortitude_macros = { workspace = true }
fortitude_workspace = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
itertools = { workspace = true }
pretty_assertions = "1.3.0"
regex = { version = "1.10.2" }
ruff_cache = { workspace = true }
ruff_diagnostics = { workspace = true }
ruff_macros = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
textwrap = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-cli = { workspace = true }
tree-sitter-fortran = { workspace = true }
