[package]
name = "fortitude_preprocessor"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.16"
dedent = "0.1.1"
insta = { version = "1.41.1", features = ["filters", "json", "redactions"] }
pretty_assertions = "1.4.1"
tempfile = "3.13.0"
test-case = "3.3.1"
