[package]
name = "fortitude_server"
version = "0.7.5"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
fortitude_linter = { workspace = true }
fortitude_workspace = { workspace = true }

anyhow = { workspace = true }
crossbeam = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
jod-thread = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
ruff_diagnostics = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
tree-sitter = { workspace = true }
tree-sitter-fortran = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
